--- a/PDVCPP01.001/PDVCPP01.001.csproj
+++ b/PDVCPP01.001/PDVCPP01.001.csproj
@@ -33,8 +33,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,17 +49,56 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Service1.cs">
+    <Compile Include="Config\Log_Config.cs" />
+    <Compile Include="Config\Service_Config.cs" />
+    <Compile Include="Controllers\ClientesController.cs" />
+    <Compile Include="DAO\ClienteDAO.cs" />
+    <Compile Include="DAO\ConfigBancoDAO.cs" />
+    <Compile Include="Guardian\ConexaoERP.cs" />
+    <Compile Include="Guardian\ConexaoGestor.cs" />
+    <Compile Include="Guardian\ConexaoGuardian.cs" />
+    <Compile Include="Guardian\ConexaoPortal.cs" />
+    <Compile Include="Guardian\Criptografia.cs" />
+    <Compile Include="Guardian\Guardian_LogTxt.cs" />
+    <Compile Include="Guardian\Guardian_TxtFile.cs" />
+    <Compile Include="Guardian\Guardian_Util.cs" />
+    <Compile Include="Guardian\Tabelas_Guardian.cs" />
+    <Compile Include="Guardian\Tabelas_Portal.cs" />
+    <Compile Include="GuardianPortalServiceClientesNovos.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Service1.Designer.cs">
-      <DependentUpon>Service1.cs</DependentUpon>
+    <Compile Include="GuardianPortalServiceClientesNovos.Designer.cs">
+      <DependentUpon>GuardianPortalServiceClientesNovos.cs</DependentUpon>
     </Compile>
+    <Compile Include="HttpClients\HttpClientBase.cs" />
+    <Compile Include="Model\Client.cs" />
+    <Compile Include="Model\ClientResult.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProjectInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ProjectInstaller.Designer.cs">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceLog\Guardian_Log.cs" />
+    <Compile Include="ServiceLog\LogAuditoria.cs" />
+    <Compile Include="ServiceLog\LogDAO.cs" />
+    <Compile Include="ServiceLog\LogEmail.cs" />
+    <Compile Include="ServiceLog\LogOcorrencia.cs" />
+    <Compile Include="ServiceLog\LogRotina.cs" />
+    <Compile Include="Service\Main.cs" />
+    <Compile Include="Service\RotinaContinua.cs" />
+    <Compile Include="Service\RotinaServico.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ProjectInstaller.resx">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
